--- a/assets/sass/cids-theme/styles/persons.sass
+++ b/assets/sass/cids-theme/styles/persons.sass
@@ -1,25 +1,85 @@
 .persons__page
     .hero
-        &,
+        min-height: unset
+        @include media-breakpoint-down(desktop)
+            &,
+            .container
+                margin-bottom: $spacing-4
+        @include media-breakpoint-up(desktop)
+            margin-bottom: $spacing-3
+            padding-bottom: 0
+        @include media-breakpoint-up(xxl)
+            margin-bottom: $spacing-5
         .container
-            @include media-breakpoint-down(desktop)
-                margin-bottom: $spacing-6
+            position: relative
         .content
             align-items: flex-start
+            @include media-breakpoint-down(desktop)
+                position: relative
             .hero-text
                 text-align: left
                 h1
                     width: columns(10)
             figure
+                position: absolute
                 @include media-breakpoint-up(desktop)
                     margin-top: 0
-                    position: absolute
-                    top: calc(100% + (#{$spacing-5}))
-                    width: columns(2)
+                    top: calc(100% + #{$spacing-3})
+                    width: columns(2.5)
                     @include media-breakpoint-up(xxl)
+                        top: calc(100% + #{$spacing-5})
                         width: columns(3)
                 @include media-breakpoint-down(desktop)
-                    margin-left: 0
+                    margin-top: 0
+                    right: 0
+                    top: 100%
+                    width: columns(5)
+        .person-aside
+            z-index: 3
+            ul
+                @include list-reset
+            @include media-breakpoint-up(desktop)
+                position: absolute
+                top: calc(100% + #{$spacing-3} + #{columns(2.5)})
+                padding-top: $spacing-2
+                @include media-breakpoint-up(xxl)
+                    top: calc(100% + #{$spacing-5} + #{columns(3)})
+                    padding-top: $spacing-3
+            .taxonomy
+                @include meta
+                a:not(:hover)
+                    text-decoration: none
+            p
+                @include h4
+                white-space: nowrap
+                margin-bottom: space()
+                @include media-breakpoint-up(desktop)
+                    margin-bottom: $spacing-1
+                @include media-breakpoint-down(desktop)
+                    width: columns(7)
+            ul + p,
+            div + div
+                margin-top: $spacing-3
+                @include media-breakpoint-up(desktop)
+                    margin-top: $spacing-4
+            .person-socials
+                a::after
+                    display: none
+                .socials-list
+                    @include meta
+                    align-items: flex-start
+                    display: flex
+                    flex-direction: column
+                .email
+                    order: 10
+                    margin-top: $spacing-2
+                    @extend .button-accent
+                    --btn-color: #{$color-background}
+                    --btn-background: #{$color-electric-blue}
+                    --btn-hover-background: #{alphaColor($color-electric-blue, 0.85)}
+                    a
+                        color: var(--btn-color)
+                        text-decoration: none
     .document-content
         @include media-breakpoint-up(desktop)
             .informations
