--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -600,16 +600,18 @@ body:not(.page__home)
 .block-image
     &.image-landscape
         @include media-breakpoint-up(desktop)
-            .container
-                margin-left: var(--grid-gutter-negative)
-                margin-right: var(--grid-gutter-negative)
+            > .container
                 padding: 0
-                width: 100%
-            figure
-                picture
-                    img
-                        width: 100% !important
-                        object-fit: cover
+                // width: 100%
+                figure
+                    picture
+                        max-width: 100%
+                        img
+                            width: 100%
+                            object-fit: cover
+                    figcaption
+                        padding-left: var(--grid-gutter)
+                        padding-right: var(--grid-gutter)
 
 // call to action
 .block-call_to_action
