--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -612,6 +612,9 @@ body:not(.page__home)
                         object-fit: cover
 
 // call to action
+.blocks
+    .block:last-child:is(.block-call_to_action)
+        margin-bottom: 0
 .block-call_to_action
     .top .block-title
         text-align: left
