--- a/layouts/partials/blocks/templates/pages/large.html
+++ b/layouts/partials/blocks/templates/pages/large.html
@@ -6,7 +6,7 @@
 )}}
 <div class="large">
   {{ range .pages }}
-    {{ $page := site.GetPage .file }}
+    {{ $page := site.GetPage .path }}
     {{ with $page }}
       <article class="page">
         {{ $heading_tag.open }}
