--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -602,13 +602,15 @@ body:not(.page__home)
         @include media-breakpoint-up(desktop)
             > .container
                 padding: 0
-                // width: 100%
                 figure
-                    picture
+                    .lightbox-button
+                        width: 100%
+                    picture,
+                    img
                         max-width: 100%
-                        img
-                            width: 100%
-                            object-fit: cover
+                    img
+                        width: 100%
+                        object-fit: cover
                     figcaption
                         padding-left: var(--grid-gutter)
                         padding-right: var(--grid-gutter)
