fix #29: people block with sidebar

--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -384,6 +384,10 @@ body:not(.page__home)
                 &:hover
                     a
                         @include link
+        @include in-page-with-sidebar
+            @include grid(2, desktop)
+            .avatar
+                width: columns(2)
         .person:hover
             .person-name a
                 @include link
