--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -360,7 +360,7 @@ body:not(.page__home)
                         position: relative
                         top: unset
                         width: pxToRem(90)
-        @include media-breakpoint-up(xl)
+        @include media-breakpoint-up(desktop)
             margin: auto
             max-width: columns(8)
 
