update with correct menu

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -80,6 +80,8 @@ $header-border-bottom-width: 1
 $header-upper-menu-border-bottom: 0
 $zindex-header: 1001
 
+$header-dropdown-title-summary-font-size-desktop: pxToRem(24)
+
 // Hero
 $hero-background-color: $color-background
 
