update theme with search changes

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -79,6 +79,7 @@ $header-logo-height-desktop: 90px
 $header-border-bottom-width: 1
 $header-upper-menu-border-bottom: 0
 $zindex-header: 1001
+$zindex-search: 1002
 
 $header-dropdown-title-summary-font-size-desktop: pxToRem(24)
 
