--- a/assets/sass/cids-theme/styles/persons.sass
+++ b/assets/sass/cids-theme/styles/persons.sass
@@ -33,6 +33,9 @@
                     margin-bottom: 0
                     margin-top: $spacing-4
     .document-content
+        @include media-breakpoint-down(desktop)
+            .lead
+                margin-bottom: var(--block-space-y)
         @include media-breakpoint-up(desktop)
             .informations
                 .biography
@@ -55,8 +58,10 @@
             ul
                 display: flex
                 flex-direction: column
-                li 
+                li, 
+                address
                     @include meta
+                li
                     > span
                         @extend .sr-only
                     &.email
@@ -93,3 +98,5 @@
                 top: columns(2.5)
                 @include media-breakpoint-up(xxl)
                     top: columns(3)
+            @include media-breakpoint-down(desktop)
+                margin-top: var(--block-space-y)
