--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -117,7 +117,8 @@ $btn-border-radius: pxToRem(3)
 
 // Blocks
 // without sidebar 
-$block-space-y-desktop: space(30)
+// $block-space-y: space(28)
+$block-space-y-desktop: space(28) !default
 
 // call to action / cta
 $block-call-to-action-accent-button-hover-background: rgba(255,255,255, 0.8)
