--- a/assets/sass/cids-theme/styles/home.sass
+++ b/assets/sass/cids-theme/styles/home.sass
@@ -79,7 +79,7 @@
                 padding-right: 0
                 width: 100%
             .persons
-                padding-bottom: var(--grid-gutter)
+                padding-bottom: 0
                 padding-left: var(--grid-gutter)
                 padding-right: var(--grid-gutter)
                 overflow-x: auto
