--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -68,6 +68,7 @@ body:not(.page__home)
                 font-family: $font-serif
             &:last-child
                 border-bottom: none
+                padding-bottom: 0
 // posts
 .block-posts
     @include media-breakpoint-up(desktop)
