--- a/layouts/partials/footer/footer-simple.html
+++ b/layouts/partials/footer/footer-simple.html
@@ -28,5 +28,6 @@
   <p class="credit">© CIDS 2024</p>
   <div class="footer-legals">
     {{ partial "footer/legals.html" }}
+    {{ partial "footer/credit.html" }}
   </div>
 </div>
