remove icons from pages in large layout

--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -181,6 +181,9 @@ body:not(.page__home)
                 .more
                     background-color: var(--color-accent)
                     color: var(--btn-hover-color)
+            &-title
+                a::after
+                    display: none
             .media
                 margin-bottom: 0
                 img
