--- a/assets/sass/cids-theme/styles/persons.sass
+++ b/assets/sass/cids-theme/styles/persons.sass
@@ -33,10 +33,13 @@
                     margin-bottom: 0
                     margin-top: $spacing-4
     .document-content
+        .container
+            position: relative
         @include media-breakpoint-down(desktop)
             .lead
                 margin-bottom: var(--block-space-y)
         @include media-breakpoint-up(desktop)
+            min-height: 100vh
             .informations
                 .biography
                     grid-column: 6 / 13
@@ -80,7 +83,18 @@
                                 @include meta
                                 content: 'Mail'
                                 display: block
-        .persons-taxonomies
+        .taxonomies-container
+            @include media-breakpoint-up(desktop)
+                @include container
+                left: 0
+                margin-top: space(5)
+                position: absolute
+                top: columns(2.5)
+                .persons-taxonomies
+                    display: flex
+                    flex-direction: column
+                @include media-breakpoint-up(xxl)
+                    top: columns(3)
             .taxonomy-title
                 @include h4
                 display: block
@@ -89,14 +103,5 @@
                 @include meta
                 a:not(:hover)
                     text-decoration: none
-            @include media-breakpoint-up(desktop)
-                display: flex
-                flex-direction: column
-                left: var(--grid-gutter)
-                margin-top: space(5)
-                position: absolute
-                top: columns(2.5)
-                @include media-breakpoint-up(xxl)
-                    top: columns(3)
             @include media-breakpoint-down(desktop)
                 margin-top: var(--block-space-y)
