osuny theme migration

--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -56,7 +56,7 @@ body:not(.page__home)
             &.block-pages
                 ul
                     display: block
-                    li + li
+                    .page + .page
                         margin-top: var(--grid-gutter)
                     @include media-breakpoint-up(desktop)
                         article
