fixed footer images

--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -44,6 +44,7 @@ footer#document-footer
             @include media-breakpoint-up(desktop)
                 margin-bottom: $spacing-3
         img
+            display: inline
             height: pxToRem(90)
             max-width: columns(6)
             + img
