--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -538,6 +538,8 @@ body:not(.page__home)
                 min-height: unset
                 > a
                     @include lead
+                    &[target="_blank"]::after
+                        font-size: var(--body-size)
                     &:hover
                         @include link($color-electric-blue)
     &:not(.block-class-with_large_links)
