fix summary block

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -79,6 +79,8 @@ $header-logo-height-desktop: 90px
 $header-border-bottom-width: 1
 $header-upper-menu-border-bottom: 0
 $header-upper-menu-active-decoration-height: 0
+$header-upper-menu-background: transparent
+$header-upper-menu-sticky-background: transparent
 $zindex-header: 1001
 $zindex-search: 1002
 
