--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -11,6 +11,8 @@ header#document-header
                     a
                         padding: 0
         &.upper-menu
+            left: 0
+            right: 0
             .nav-level-1
                 gap: 0
                 align-items: center
