--- a/assets/sass/cids-theme/styles/events.sass
+++ b/assets/sass/cids-theme/styles/events.sass
@@ -18,6 +18,8 @@ body.events__page
                         width: columns(6)
         .document-content
             .block-summary
+                .block-content
+                    padding-left: 0 !important
                 .lead
                     p
                         @include h3
